# Rag_Backend

./: .coverage  .env.test  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python.yml
app/: Hola.docx  configurations.py  main.py  usecases.py
app/Test/: _test.py  test_app.py  test_mongo.py
app/adapters/: chroma_db_adapter.py  mongo_db_adapter.py  openai_adapter.py
app/api/: Strategy.py  dependencies.py  routers.py
app/core/: models.py  ports.py
app/test/: test_app.py  test_chroma.py
app/uploads/: La Segunda Guerra Mundial.docx
uploads/: objetivo_de_desarrollo_sostenible_4.docx
